--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                             <a data-hash href="#contact-us"><i class="fa fa-location-arrow"></i>Contact Us</a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/company/sterling-accounting-solutions-ltd" target="_blank"><i class="fa fa-linkedin"></i></a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/SAS_Accountants" target="_blank"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/Sterling-Accounting-Solutions-1077110065707567" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
                     </ul>
                 </nav>
@@ -154,8 +154,8 @@
                                 for Entrepreneurial Businesses
                         </div>
 
-                        <div class="text-justify v-smash-text-large tp-caption v-caption-h1 sfl stl"
-                            data-x="200"
+                        <div class="text-center v-smash-text-large tp-caption v-caption-h1 sfl stl"
+                            data-x="30"
                             data-y="360"
                             data-speed="700"
                             data-start="1200"
@@ -166,10 +166,9 @@
                             data-endelementdelay="0"
                             data-endspeed="300">
                             Sterling Accounting Solutions are a  dynamic,  fast-growing accountancy <br />
-                            practice specialising in business planning, advisory and support services <br />
-                            for SME’s. Based in Hertfordshire, but with a client base spread across the<br />
-                            UK, our clients operate in a wide variety of industries including recruitment, <br />
-                            construction, manufacturing, wholesale distribution and IT. 
+                            practice specialising in business planning, advisory and support services for SME’s.  <br />
+                            Based in Hertfordshire, but with a client base spread across the UK, our clients operate in a wide <br />
+                            variety of industries including recruitment, construction, manufacturing, wholesale distribution and IT. <br />
                         </div>
 
                     </li>
@@ -313,8 +312,7 @@
 
                 <div class="row">
                     <p class="v-lead text-justify">
-We found that SME’s therefore often just employ qualified accountants to help with the basics, being year-end accounts and tax returns. Although few clients have complained of a lack of choice in these areas, most do complain that the services provided are expensive, impersonal and often uninformative. 
-Spotting an opportunity, we have developed a flexible service, which is a fraction of the cost of employing a full-time accountant and offers far more than the typical one visit a year accountancy practice.
+We found that SME’s therefore often just employ qualified accountants to help with the basics, being year-end accounts and tax returns. Although few clients have complained of a lack of choice in these areas, most do complain that the services provided are expensive, impersonal and often uninformative.
                     </p>
                 </div>
             </div>
@@ -509,7 +507,7 @@ We offer a broad range of financial and accountancy services to all of our clien
                         <div class="values-box values-box-thin">
                             <div class="feature-box-text text-center clearfix ">
                                 <h3>Mutually Beneficial Relationships</h3>
-                                <div class="feature-box-text-inner text-justify" style="font-size:11px;">
+                                <div class="feature-box-text-inner text-justify" style="font-size:12px;">
     Develop long term relationships that benefit all parties involved.
     Ensure that the needs of our clients are at the forefront of everything we do.
     <br />
@@ -521,10 +519,10 @@ We offer a broad range of financial and accountancy services to all of our clien
                     </div>
 
                     <div class="col-md-4">
-                        <div class="values-box values-box-thin values-box-bottom-padding">
+                        <div class="values-box values-box-thin">
                             <div class="text-center feature-box-text clearfix">
-                                <h3>Honesty & Integrity</h3>
-                                <div class="text-justify feature-box-text-inner" style="font-size:11px;">
+                                <h3>Honesty &amp; Integrity</h3>
+                                <div class="text-justify feature-box-text-inner" style="font-size:12px;">
     Be straightforward and truthful in all our dealings.
     Willing to take on board new ideas, information and suggestions.
     Do not misrepresent ourselves or associate ourselves with misleading or false information.
@@ -537,7 +535,7 @@ We offer a broad range of financial and accountancy services to all of our clien
                         <div class="values-box values-box-thin values-box-bottom-padding">
                             <div class="text-center feature-box-text clearfix">
                                 <h3>Objectivity</h3>
-                                <div class="text-justify feature-box-text-inner" style="font-size:11px;">
+                                <div class="text-justify feature-box-text-inner" style="font-size:12px;">
     Always have regard to the facts and considerations relevant to the task at hand.
     Never allow bias, self-interest or personal gain to override our actions.
     <br />
@@ -553,7 +551,7 @@ We offer a broad range of financial and accountancy services to all of our clien
                         <div class="values-box values-box-thin">
                             <div class="text-center feature-box-text clearfix">
                                 <h3>Professional Competence</h3>
-                                <div class="text-justify feature-box-text-inner" style="font-size:11px;">
+                                <div class="text-justify feature-box-text-inner" style="font-size:12px;">
     Ensure compliance with applicable laws, regulations and standards;
     Constantly strive to enhance our skills, knowledge and experience as required to provide a professional service.
                                 </div>
@@ -565,7 +563,7 @@ We offer a broad range of financial and accountancy services to all of our clien
                         <div class="values-box values-box-thin values-box-bottom-padding">
                             <div class="text-center feature-box-text">
                                 <h3>Respect</h3>
-                                <div class="text-justify feature-box-text-inner" style="font-size: 11px;">
+                                <div class="text-justify feature-box-text-inner" style="font-size: 12px;">
     Behave in a professional manner at all times.
     Encourage an inclusive working environment where others are treated with dignity and respect.
                                 </div>
@@ -573,6 +571,10 @@ We offer a broad range of financial and accountancy services to all of our clien
                         </div>
                     </div>
                 </div>
+
+                <!-- Spacer -->
+                <div class="v-spacer col-sm-12 v-height-standard"></div>
+
             </div>
         </div>
         <!-- End values -->
@@ -646,9 +648,9 @@ If you are interested in becoming part of the team, then please send across an u
 
                             <div class="center">
                                 <ul class="social-icons large center">
-                                    <li class="linkedin"><a href="#" target="_blank"><i class="fa fa-linkedin"></i><i class="fa fa-linkedin"></i></a></li>
-                                    <li class="twitter"><a href="http://www.twitter.com/#" target="_blank"><i class="fa fa-twitter"></i><i class="fa fa-twitter"></i></a></li>
-                                    <li class="facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i><i class="fa fa-facebook"></i></a></li>
+                                    <li class="linkedin"><a href="https://www.linkedin.com/company/sterling-accounting-solutions-ltd" target="_blank"><i class="fa fa-linkedin"></i><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="twitter"><a href="https://twitter.com/SAS_Accountants" target="_blank"><i class="fa fa-twitter"></i><i class="fa fa-twitter"></i></a></li>
+                                    <li class="facebook"><a href="https://www.facebook.com/Sterling-Accounting-Solutions-1077110065707567" target="_blank"><i class="fa fa-facebook"></i><i class="fa fa-facebook"></i></a></li>
                                 </ul>
                             </div>
 
