Added the meet the team section with flipping div animation

--- a/index.html
+++ b/index.html
@@ -320,6 +320,41 @@ We found that SME’s therefore often just employ qualified accountants to help 
         <!-- End expierences -->
 
         <div class="v-spacer col-sm-12 v-height-standard"></div>
+        <!--Meet the team-->
+        <div class="v-bg-stylish">
+
+            <div class="container" id="meet-the-team">
+
+                <div class="row center">
+
+                    <div class="col-sm-12">
+                        <p class="v-smash-text-large text-center">
+                            <span>Meet The Team</span>
+                        </p>
+                        <div class="horizontal-break"></div>
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img alt="will-meet-the-team" src="img/meet-the-team/will-meet-the-team.jpg">
+                            </div>
+                            <div class="back">
+                                Will Sterling - Director
+
+                                Will achieved 1st class honours in Accounting & Finance at Bournemouth University, before going on to complete his ACA in audit with BDO LLP in London.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End meet the team-->
+
+        <div class="v-spacer col-sm-12 v-height-standard"></div>
         <!--Master-plan-->
         <div class="v-bg-stylish">
 
