Added pound sign icon and updated meet team section (waiting upon pictures)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Sterling Accounting Solutions">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="img/pound-sign-icon.png" />
 
     <!-- Web Fonts  -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800" rel="stylesheet" type="text/css">
@@ -319,8 +320,10 @@ We found that SME’s therefore often just employ qualified accountants to help 
         </div>
         <!-- End expierences -->
 
+        <!--Meet the team
+
         <div class="v-spacer col-sm-12 v-height-standard"></div>
-        <!--Meet the team-->
+
         <div class="v-bg-stylish">
 
             <div class="container" id="meet-the-team">
@@ -336,23 +339,142 @@ We found that SME’s therefore often just employ qualified accountants to help 
 
                 </div>
 
-                <div class="row">
-                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                        <div class="flipper">
-                            <div class="front">
-                                <img alt="will-meet-the-team" src="img/meet-the-team/will-meet-the-team.jpg">
-                            </div>
-                            <div class="back">
-                                Will Sterling - Director
+                <div class="v-spacer col-sm-12 v-height-standard"></div>
 
-                                Will achieved 1st class honours in Accounting & Finance at Bournemouth University, before going on to complete his ACA in audit with BDO LLP in London.
+                <div class="row">
+
+                    <div class="col-md-4">
+
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    John Sterling
+                                </div>
+                                <div class="back text-justify">
+                                    John Sterling - Managing Director
+
+                                    John is an FCA with a wealth of experience, gained primarily in the Construction sector. John has an Economics degree from Manchester University.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-4">
+
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+
+                            <div class="flipper">
+                                <div class="front">
+                                    Will Sterling
+                                </div>
+                                <div class="back text-justify">
+                                    Will Sterling - Director
+
+                                    Will achieved 1st class honours in Accounting &amp; Finance at Bournemouth University, before going on to complete his ACA in audit with BDO LLP in London.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-4">
+
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    Tom Sterling
+                                </div>
+                                <div class="back text-justify">
+                                    Tom Sterling - Director
+
+                                    Tom has a number of years’ experience working within industry and previously held the role of Financial Controller at a drylining contractor.
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
+
+                <div class="row">
+
+                    <div class="col-md-4">
+
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    Finlay Everington
+                                </div>
+                                <div class="back text-justify">
+                                    Finlay Everington - Assistant Accountant
+
+                                    Finlay previously completed an accountancy apprenticeship with a large property management company, whilst studying towards AAT levels 2, 3 and 4. Finlay is currently working towards the ACA.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-4">
+
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    Meha Bakhai
+                                </div>
+                                <div class="back text-justify">
+                                    Meha Bakhai - Assistant Accountant
+
+                                    Meha studied Accounting with Economics at Northampton University and is now studying towards the ACA qualification, alongside her work at SAS.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-4">
+
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    Olicia Uzorko
+                                </div>
+                                <div class="back text-justify">
+                                    Olicia Uzorko - Assistant Accountant
+
+                                    Olicia previously worked as an Accounts Assistant for a construction company. Olicia is now in the process of gaining the AAT qualification.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="row">
+
+                    <div class="col-md-4">
+
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    Philippa Sterling
+                                </div>
+                                <div class="back text-justify">
+                                    Philippa Sterling - Payroll Manager
+
+                                    Philippa combines her part-time work as Payroll manager with her other full-time job of being a mum to two young boys.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
             </div>
         </div>
-        <!-- End meet the team-->
+        End meet the team-->
 
         <div class="v-spacer col-sm-12 v-height-standard"></div>
         <!--Master-plan-->
